Panel: re-added quick disk space calculation with space key

Was removed in version 2.6.0. New implementation.

Uses old (fixed) shortcut. Calculation is async. UI is extended by new panel
progress bar and cancel button.
Space key for ".." dummy selection does a default, verbose calculation (with
popup dialog) for all files and folders in panel (and selects all; this was
the old behaviour).

FIXED: [ 379170 ] 2.6.0 - Regression: "Spacebar calculates disk space" feature is missing
BUG: 379170

This partially reverts commit 83d3b67274b24dd18fdcb4adf740a0e8452d5ce0.
Changed layout.xml.