krusader/Panel/krselectionmode.h
@@ -50,6 +50,9 @@ public:
     inline bool insertMovesDown() {
         return _insertMovesDown;
     }
+    inline bool spaceCalculatesDiskSpace() {
+        return _spaceCalculatesDiskSpace;
+    }
     inline bool rightButtonSelects() {
         return _rightButtonSelects;
     }
@@ -75,7 +78,7 @@ public:
     virtual ~KrSelectionMode() {}
 
 protected:
-    bool _useQTSelection, _spaceMovesDown, _insertMovesDown;
+    bool _useQTSelection, _spaceMovesDown, _insertMovesDown, _spaceCalculatesDiskSpace;
     bool _rightButtonSelects, _leftButtonSelects, _rightButtonPreservesSelection;
     bool _leftButtonPreservesSelection, _shiftCtrlRightButtonSelects, _shiftCtrlLeftButtonSelects;
     int _showContextMenu;
@@ -88,6 +91,7 @@ public:
         _useQTSelection = true;
         _spaceMovesDown = false;
         _insertMovesDown = true;
+        _spaceCalculatesDiskSpace = false;
         _rightButtonSelects = true;
         _leftButtonSelects = true;
         _rightButtonPreservesSelection = false;
@@ -105,6 +109,7 @@ public:
         _useQTSelection = false;
         _spaceMovesDown = true;
         _insertMovesDown = true;
+        _spaceCalculatesDiskSpace = true;
         _rightButtonSelects = true;
         _leftButtonSelects = true;
         _rightButtonPreservesSelection = false;
@@ -122,6 +127,7 @@ public:
         _useQTSelection = false;
         _spaceMovesDown = false;
         _insertMovesDown = true;
+        _spaceCalculatesDiskSpace = true;
         _rightButtonSelects = true;
         _leftButtonSelects = false;
         _rightButtonPreservesSelection = true;
@@ -139,6 +145,7 @@ public:
         _useQTSelection = false;
         _spaceMovesDown = false;
         _insertMovesDown = true;
+        _spaceCalculatesDiskSpace = true;
         _rightButtonSelects = false;
         _leftButtonSelects = false;
         _rightButtonPreservesSelection = true;
