krusader/Panel/listpanel.cpp
@@ -89,6 +89,7 @@ YP   YD 88   YD ~Y8888P' `8888Y' YP   YP Y8888D' Y88888P 88   YD
 #include "../BookMan/krbookmarkbutton.h"
 #include "../FileSystem/filesystem.h"
 #include "../FileSystem/krpermhandler.h"
+#include "../FileSystem/sizecalculator.h"
 #include "../Dialogs/krdialogs.h"
 #include "../Dialogs/krspwidgets.h"
 #include "../Dialogs/krsqueezedtextlabel.h"
@@ -239,17 +240,27 @@ ListPanel::ListPanel(QWidget *parent, AbstractPanelManager *manager, KConfigGrou
     freeSpace->setAlignment(Qt::AlignRight | Qt::AlignVCenter);
     ADD_WIDGET(freeSpace);
 
+    // progress indicator and cancel button for the quick calc size
+    quickSizeCalcProgress = new QProgressBar(this);
+    quickSizeCalcProgress->hide();
+    ADD_WIDGET(quickSizeCalcProgress);
+    cancelQuickSizeCalcButton = new QToolButton(this);
+    cancelQuickSizeCalcButton->hide();
+    cancelQuickSizeCalcButton->setIcon(krLoader->loadIcon("dialog-cancel", KIconLoader::Toolbar, 16));
+    cancelQuickSizeCalcButton->setToolTip(i18n("Cancel directory space calculation"));
+    ADD_WIDGET(cancelQuickSizeCalcButton);
+
     // progress indicator for the preview job
     previewProgress = new QProgressBar(this);
     previewProgress->hide();
     ADD_WIDGET(previewProgress);
 
-    // a cancel button for the inplace refresh mechanism
-    inlineRefreshCancelButton = new QToolButton(this);
-    inlineRefreshCancelButton->hide();
-    inlineRefreshCancelButton->setIcon(krLoader->loadIcon("dialog-cancel", KIconLoader::Toolbar, 16));
-    connect(inlineRefreshCancelButton, SIGNAL(clicked()), this, SLOT(inlineRefreshCancel()));
-    ADD_WIDGET(inlineRefreshCancelButton);
+    // a cancel button for the filesystem refresh and preview job
+    cancelProgressButton = new QToolButton(this);
+    cancelProgressButton->hide();
+    cancelProgressButton->setIcon(krLoader->loadIcon("dialog-cancel", KIconLoader::Toolbar, 16));
+    connect(cancelProgressButton, SIGNAL(clicked()), this, SLOT(cancelProgress()));
+    ADD_WIDGET(cancelProgressButton);
 
     // button for changing the panel popup position in the panel
     popupPositionBtn = new QToolButton(this);
@@ -347,8 +358,10 @@ ListPanel::ListPanel(QWidget *parent, AbstractPanelManager *manager, KConfigGrou
         h->setSpacing(0);
         h->addWidget(totals);
         h->addWidget(freeSpace);
+        h->addWidget(quickSizeCalcProgress);
+        h->addWidget(cancelQuickSizeCalcButton);
         h->addWidget(previewProgress);
-        h->addWidget(inlineRefreshCancelButton);
+        h->addWidget(cancelProgressButton);
         h->addWidget(popupBtn);
         v->addLayout(h);
 
@@ -358,12 +371,12 @@ ListPanel::ListPanel(QWidget *parent, AbstractPanelManager *manager, KConfigGrou
     setLayout(layout);
 
     connect(&KrColorCache::getColorCache(), SIGNAL(colorsRefreshed()), this, SLOT(refreshColors()));
-    connect(krApp, SIGNAL(shutdown()), SLOT(inlineRefreshCancel()));
+    connect(krApp, SIGNAL(shutdown()), SLOT(cancelProgress()));
 }
 
 ListPanel::~ListPanel()
 {
-    inlineRefreshCancel();
+    cancelProgress();
     delete view;
     view = 0;
     delete func;
@@ -416,6 +429,7 @@ void ListPanel::createView()
 
     view->widget()->installEventFilter(this);
 
+    connect(view->op(), &KrViewOperator::quickCalcSpace, func, &ListPanelFunc::quickCalcSpace);
     connect(view->op(), SIGNAL(goHome()), func, SLOT(home()));
     connect(view->op(), SIGNAL(dirUp()), func, SLOT(dirUp()));
     connect(view->op(), &KrViewOperator::defaultDeleteFiles, func, &ListPanelFunc::defaultDeleteFiles);
@@ -949,7 +963,7 @@ void ListPanel::keyPressEvent(QKeyEvent *e)
         break;
 
     case Qt::Key_Escape:
-        inlineRefreshCancel();
+        cancelProgress();
         break;
 
     default:
@@ -989,11 +1003,11 @@ void ListPanel::slotPreviewJobStarted(KJob *job)
     previewJob = job;
     connect(job, SIGNAL(percent(KJob*,ulong)), SLOT(slotPreviewJobPercent(KJob*,ulong)));
     connect(job, &KJob::result, this, &ListPanel::slotPreviewJobResult);
-    inlineRefreshCancelButton->setMaximumHeight(popupBtn->height());
-    inlineRefreshCancelButton->show();
+    cancelProgressButton->setMaximumHeight(popupBtn->height());
+    cancelProgressButton->show();
     previewProgress->setValue(0);
     previewProgress->setFormat(i18n("loading previews: %p%"));
-    previewProgress->setMaximumHeight(inlineRefreshCancelButton->height());
+    previewProgress->setMaximumHeight(cancelProgressButton->height());
     previewProgress->show();
 }
 
@@ -1007,10 +1021,10 @@ void ListPanel::slotPreviewJobResult(KJob* /*job*/)
     previewJob = 0;
     previewProgress->hide();
     if(!inlineRefreshJob)
-        inlineRefreshCancelButton->hide();
+        cancelProgressButton->hide();
 }
 
-void ListPanel::slotJobStarted(KIO::Job* job)
+void ListPanel::slotRefreshJobStarted(KIO::Job* job)
 {
     // disable the parts of the panel we don't want touched
     status->setEnabled(false);
@@ -1037,10 +1051,10 @@ void ListPanel::slotJobStarted(KIO::Job* job)
     inlineRefreshJob = job;
 
     totals->setText(i18n(">> Reading..."));
-    inlineRefreshCancelButton->show();
+    cancelProgressButton->show();
 }
 
-void ListPanel::inlineRefreshCancel()
+void ListPanel::cancelProgress()
 {
     if (inlineRefreshJob) {
         disconnect(inlineRefreshJob, 0, this, 0);
@@ -1091,7 +1105,7 @@ void ListPanel::inlineRefreshListResult(KJob*)
     syncBrowseButton->setEnabled(true);
 
     if(!previewJob)
-        inlineRefreshCancelButton->hide();
+        cancelProgressButton->hide();
 }
 
 void ListPanel::jumpBack()
@@ -1318,4 +1332,19 @@ void ListPanel::setPopupPosition(int pos)
     if ((pos < 2) != (qobject_cast<PanelPopup*>(splt->widget(0)) != NULL)) {
         splt->insertWidget(0, splt->widget(1)); // swapping widgets in splitter
     }
+}
+
+void ListPanel::connectQuickSizeCalculator(SizeCalculator *sizeCalculator)
+{
+    connect(sizeCalculator, &SizeCalculator::started, this, [=]() {
+        quickSizeCalcProgress->reset();
+        quickSizeCalcProgress->show();
+        cancelQuickSizeCalcButton->show();
+    });
+    connect(cancelQuickSizeCalcButton, &QToolButton::clicked, sizeCalculator, &SizeCalculator::cancel);
+    connect(sizeCalculator, &SizeCalculator::progressChanged, quickSizeCalcProgress, &QProgressBar::setValue);
+    connect(sizeCalculator, &SizeCalculator::finished, this, [=]() {
+        cancelQuickSizeCalcButton->hide();
+        quickSizeCalcProgress->hide();
+    });
 }
